# picpickstudio-imageautoloader

./: cli.bat  cli.py  default-config.yml  ipython.bat  make.bat  make.py  pyproject.toml
picpickstudio_imageautoloader/: cli.py  config.py  default-config.yml  dir_watcher.py  image_previewer.py  window_watcher.py  window_watcher_win32.py
picpickstudio_imageautoloader/src/: config.py  dir_watcher.py  window_watcher.py  window_watcher_win32.py
windowcapture_win_cpp/: CMakeLists.txt  capture.cpp  capture.hpp  capture_winrt.cpp  capture_winrt.hpp  main.cpp  pch.hpp  semaphore.cpp  semaphore.hpp  test.cpp
windowcapture_win_py/: __init__.pyi
